--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -23,7 +23,7 @@
 						<li> <a class = "button" href = "Education_Page.html"> Education Projects </a> </li>
 						<li> <a class = "button" href = "GameJam_Page.html" > Game Jam Projects </a> </li>
 						<li> <a class = "button" href = "Personal_Page.html" > Personal Projects </a> </li>
-						<li> <a class = "button" href = "Contact_Page.html" > Contact </a> </li>
+						<li> <a id = "currentPage" class = "button" href = "Contact_Page.html" > Contact </a> </li>
 					</ul>
 				</nav>
 			</div>
