--- a/Personal_Page.html
+++ b/Personal_Page.html
@@ -24,7 +24,7 @@
 						<li> <a class = "button" href = "index.html"> About Me </a> </li>
 						<li> <a class = "button" href = "Education_Page.html"> Education Projects </a> </li>
 						<li> <a class = "button" href = "GameJam_Page.html" > Game Jam Projects </a> </li>
-						<li> <a class = "button" href = "Personal_Page.html" > Personal Projects </a> </li>
+						<li> <a id = "currentPage" class = "button" href = "Personal_Page.html" > Personal Projects </a> </li>
 						<li> <a class = "button" href = "Contact_Page.html" > Contact </a> </li>
 					</ul>
 				</nav>
