--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<header>
 			<h1> Corey Mills - Portfolio </h1>
 			<nav>
+				<p> test</p>
 				<div id = "mainNav">
 						<ul>
 							<li> <a id = "currentPage" class = "button" href = "index.html"> About Me </a> </li>
