--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -16,8 +16,8 @@
 	
 		<header>
 			<h1> Contact </h1>
-			<div id = "mainNav">
-				<nav>
+			<nav>
+				<div id = "mainNav">
 					<ul>
 						<li> <a class = "button" href = "index.html"> About Me </a> </li>
 						<li> <a class = "button" href = "Education_Page.html"> Education Projects </a> </li>
@@ -25,12 +25,21 @@
 						<li> <a class = "button" href = "Personal_Page.html" > Personal Projects </a> </li>
 						<li> <a id = "currentPage" class = "button" href = "Contact_Page.html" > Contact </a> </li>
 					</ul>
-				</nav>
-			</div>
+				</div>
+				
+				<div id = "ddNav" class = "dropDown">
+					<h2 class = "dropDownBtn"> &#8801 </h2>
+					<div = class = "dropDownContent">
+						<a class = "button" href = "index.html"> About Me </a>
+						<a class = "button" href = "Education_Page.html"> Education Projects </a>
+						<a class = "button" href = "GameJam_Page.html" > Game Jam Projects </a>
+						<a class = "button" href = "Personal_Page.html" > Personal Projects </a>
+					</div>
+				</div>
+			</nav>
 		</header>
 		
 		<main>
-			<br/> <br/> <br/> <br/> <br/> <br/>
 			<div class = "sec contactDetails">
 				<div>
 					<h2> Contact Me: </h2>
@@ -71,6 +80,5 @@
 		<footer>
 			<p> Copyright &#169; Corey Mills 2021 </p>
 		</footer>
-		<br/> <br/>
 	</body>
 </html>
