--- a/Education_Page.html
+++ b/Education_Page.html
@@ -20,8 +20,8 @@
 		
 		<header>
 			<h1> Education Projects </h1>
-			<div id = "mainNav">
-				<nav>
+			<nav>
+				<div id = "mainNav">
 					<ul>
 						<li> <a class = "button" href = "index.html"> About Me </a> </li>
 						<li> <a id = "currentPage" class = "button" href = "Education_Page.html"> Education Projects </a> </li>
@@ -29,8 +29,18 @@
 						<li> <a class = "button" href = "Personal_Page.html" > Personal Projects </a> </li>
 						<li> <a class = "button" href = "Contact_Page.html" > Contact </a> </li>
 					</ul>
-				</nav>
-			</div>
+				</div>
+				
+				<div id = "ddNav" class = "dropDown">
+					<h2 class = "dropDownBtn"> &#8801 </h2>
+					<div = class = "dropDownContent">
+						<a class = "button" href = "index.html"> About Me </a>
+						<a class = "button" href = "GameJam_Page.html" > Game Jam Projects </a>
+						<a class = "button" href = "Personal_Page.html" > Personal Projects </a>
+						<a class = "button" href = "Contact_Page.html" > Contact </a>
+					</div>
+				</div>
+			</nav>
 		</header>
 		
 		<main>
