--- a/Personal_Page.html
+++ b/Personal_Page.html
@@ -18,6 +18,28 @@
 	
 		<header>
 			<h1> Personal Projects </h1>
+			<nav>
+				<div id = "mainNav">
+					<ul>
+						<li> <a class = "button" href = "index.html"> About Me </a> </li>
+						<li> <a class = "button" href = "Education_Page.html"> Education Projects </a> </li>
+						<li> <a class = "button" href = "GameJam_Page.html" > Game Jam Projects </a> </li>
+						<li> <a id = "currentPage" class = "button" href = "Personal_Page.html" > Personal Projects </a> </li>
+						<li> <a class = "button" href = "Contact_Page.html" > Contact </a> </li>
+					</ul>
+				</div>
+				
+				<div id = "ddNav" class = "dropDown">
+					<h2 class = "dropDownBtn"> &#8801 </h2>
+					<div = class = "dropDownContent">
+						<a class = "button" href = "index.html"> About Me </a>
+						<a class = "button" href = "Education_Page.html"> Education Projects </a>
+						<a class = "button" href = "GameJam_Page.html" > Game Jam Projects </a>
+						<a class = "button" href = "Contact_Page.html" > Contact </a>
+					</div>
+				</div>
+			</nav>
+			
 			<div id = "mainNav">
 				<nav>
 					<ul>
