--- a/Education_Page.html
+++ b/Education_Page.html
@@ -13,6 +13,7 @@
 	
 	<body>
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
+		<script src = "NavMenu.js"> </script>
 		<script src = "jquery.visible.min.js"> </script>
 		<script src = "SlideShow.js"> </script>
 		<script src = "MoreInfo.js"> </script>
