--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -12,6 +12,9 @@
 	</head>
 	
 	<body>
+		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
+		<script src = "NavMenu.js"> </script>
+		<script src = "jquery.visible.min.js"> </script>
 		<script src = "SlideShow.js"> </script>
 		<script src = "MoreInfo.js"> </script>
 		<script src = "TopScript.js"> </script>
