--- a/Education_Page.html
+++ b/Education_Page.html
@@ -15,6 +15,7 @@
 			<nav>
 				<div id="mainNav">
 					<ul>
+						<li><a class="button"href="index.html">About Me</a></li>
 						<li><a id="currentPage"class="button"href="Education_Page.html">Education Projects</a></li>
 						<li><a class="button"href="GameJam_Page.html">Game Jam Projects</a></li>
 						<li><a class="button"href="Personal_Page.html">Personal Projects</a></li>
