--- a/Education_Page.html
+++ b/Education_Page.html
@@ -122,8 +122,8 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt5',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss5"><video src="Media/Flocking/FlockingSim_311.mp4"autoplay>Video Not Found</video></div>	
-						<div class="ss5"><video src="Media/Flocking/FlockingSim_111.mp4"autoplay>Video Not Found</video></div>
+						<div class="ss5"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/BM6Jd312IfY?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>	
+						<div class="ss5"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/ECk3KlQFAhs?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
 					</div>
 				</div>
 			</div>
@@ -138,7 +138,22 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt6',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss6"><video src="Media/RaytracingOutput.mp4"autoplay>Video Not Found</video></div>
+						<div class="ss6"><video src="Media/RaytracingOutput.mp4"autoplay;>Video Not Found</video></div>
+					</div>
+				</div>
+			</div>
+			<div class="sec">
+				<div><h2>Tank AI<a class="githubProjectLink"href="https://github.com/CoreyMills/Tank-AI"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div class="flexContainer">
+					<div class="col">
+						<p>Second Year.<br><br>Created using C++ and the SDL library.<br><br>Tank AI created to be placed within the given environment, and use the following behaviours-<br><br>
+							FSM & FuSM decision making<br><br>Steering Behaviours (Seek, Arrive, Pursuit, Ob Avoidance, etc.).<br><br>DRS Pathfinding</p> 
+						<p id="smt7"class="showMoreText">Text Here</p>
+						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt7',this)">Show More</a></div>
+					</div>
+					<div class="col ssContainer">
+						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/IRRzdAhTBxY?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/kykelsJNR1E?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
 					</div>
 				</div>
 			</div>
@@ -160,15 +175,15 @@
 							Here are several images & short videos to show some fo these features.
 						</p> 
 						
-						<p id="smt7"class="showMoreText">Text Here</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt7',this)">Show More</a></div>
+						<p id="smt8"class="showMoreText">Text Here</p>
+						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt8',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss7"><video src="Media/PhysicsEngine/SnowParticles.mp4"autoplay>Video Not Found</video> </div>
-						<div class="ss7"><video src="Media/PhysicsEngine/FireParticles.mp4"autoplay>Video Not Found</video></div>
-						<div class="ss7"><video src="Media/PhysicsEngine/RainParticles.mp4"autoplay>Video Not Found</video></div>
-						<div class="ss7"><video src="Media/PhysicsEngine/PhysicsCollision.mp4"autoplay>Video Not Found</video></div>
-						<div class="ss7"><img src="Media/PhysicsEngine/OctTree.png"alt="Image Not Found"/></div>
+						<div class="ss8"><video src="Media/PhysicsEngine/SnowParticles.mp4"autoplay>Video Not Found</video> </div>
+						<div class="ss8"><video src="Media/PhysicsEngine/FireParticles.mp4"autoplay>Video Not Found</video></div>
+						<div class="ss8"><video src="Media/PhysicsEngine/RainParticles.mp4"autoplay>Video Not Found</video></div>
+						<div class="ss8"><video src="Media/PhysicsEngine/PhysicsCollision.mp4"autoplay>Video Not Found</video></div>
+						<div class="ss8"><img src="Media/PhysicsEngine/OctTree.png"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
@@ -190,11 +205,11 @@
 							Etc.
 							The video shows many of the above features.
 						</p> 
-						<p id="smt8" class="showMoreText">Text Here</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt8',this)">Show More</a></div>
+						<p id="smt9" class="showMoreText">Text Here</p>
+						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt9',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss8"><video src="Media/GraphicsEngine.mp4"autoplay>Video Not Found</video></div>
+						<div class="ss9"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/s6B4YX9Q6J4?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
 					</div>
 				</div>
 			</div>
@@ -215,14 +230,13 @@
 							Thread-safe techniques
 							Concurrent Dictionaries
 						</p> 
-						<p id="smt9"class="showMoreText">Text Here</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt9',this)">Show More</a></div>
+						<p id="smt10"class="showMoreText">Text Here</p>
+						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt10',this)">Show More</a></div>
 					</div>
-					<div class="col ssContainer">
-						<div class="ss9"><video src="Media/Battleships/ProjectExplanation.mp4"autoplay>Video Not Found</video></div>						
-						<div class="ss9"><img src="Media/Battleships/ConcurrentGames.png"alt="Image Not Found"/></div>
-						<div class="ss9"><img src="Media/Battleships/Spectating.png"alt="Image Not Found"/></div>						
-						<div class="ss9"><img src="Media/Battleships/ChallengeRequest.png"alt="Image Not Found"/></div>
+					<div class="col ssContainer">					
+						<div class="ss10"><img src="Media/Battleships/ConcurrentGames.png"alt="Image Not Found"/></div>
+						<div class="ss10"><img src="Media/Battleships/Spectating.png"alt="Image Not Found"/></div>						
+						<div class="ss10"><img src="Media/Battleships/ChallengeRequest.png"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
@@ -241,11 +255,11 @@
 							Created using C++ and the SDL library.
 							Audio Created using BeepBox.
 						</p> 
-						<p id="smt10"class="showMoreText">Text Here</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt10',this)">Show More</a></div>
+						<p id="smt11"class="showMoreText">Text Here</p>
+						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt11',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss10"><video src="Media/Mario&GravityGuy.mp4"autoplay>Video Not Found</video></div>
+						<div class="ss11"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/bN-Obo7tuUA?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
 					</div>
 				</div>
 			</div>
@@ -254,8 +268,7 @@
 	</body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="NavMenu.js"></script>
-<script src="jquery.visible.min.js"></script>
-<script src="SlideShow.js"></script>
-<script src="MoreInfo.js"></script>
-<script src="TopScript.js"></script>
+<script async src="NavMenu.js"></script>
+<script async src="SlideShow.js"></script>
+<script async src="MoreInfo.js"></script>
+<script async src="TopScript.js"></script>
