--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -43,7 +43,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss0"><video src="Media/GGJ2021/X marks the spot.mp4"autoplay>Video Not Found</video></div>						
+						<div class="ss0"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/ixsLO-ug_Fs?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>						
 						<div class="ss0"><img src="Media/GGJ2021/X marks the spot_screenshot.png"alt="Image Not Found"/></div>						
 						<div class="ss0"><img src="Media/GGJ2021/page-manual-two.png"alt="Image Not Found"/></div>
 					</div>
@@ -84,8 +84,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt3',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss3"><video src="Media/UTC/UTC_GameJam.mp4"autoplay>Video Not Found</video></div>					
-						<div class="ss3"><img src="Media/UTC/UTC_GameJam.png"alt="Image Not Found"/></div>
+						<div class="ss3"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/v-5hx9rI0oI?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>				
 					</div>
 				</div>
 			</div>
@@ -94,8 +93,7 @@
 	</body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="NavMenu.js"></script>
-<script src="jquery.visible.min.js"></script>
-<script src="SlideShow.js"></script>
-<script src="MoreInfo.js"></script>
-<script src="TopScript.js"></script>
+<script async src="NavMenu.js"></script>
+<script async src="SlideShow.js"></script>
+<script async src="MoreInfo.js"></script>
+<script async src="TopScript.js"></script>
