--- a/Personal_Page.html
+++ b/Personal_Page.html
@@ -52,8 +52,7 @@
 	</body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="NavMenu.js"></script>
-<script src="jquery.visible.min.js"></script>
-<script src="SlideShow.js"></script>
-<script src="MoreInfo.js"></script>
-<script src="TopScript.js"></script>
+<script async src="NavMenu.js"></script>
+<script async src="SlideShow.js"></script>
+<script async src="MoreInfo.js"></script>
+<script async src="TopScript.js"></script>
