--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -95,5 +95,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script async src="NavMenu.js"></script>
 <script async src="SlideShow.js"></script>
-<script async src="MoreInfo.js"></script>
-<script async src="TopScript.js"></script>
+<script src="MoreInfo.js"></script>
+<script src="TopScript.js"></script>
