--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -55,4 +55,4 @@
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script async src="NavMenu.js"></script>
-<script async src="TopScript.js"></script>
+<script src="TopScript.js"></script>
