--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
 		<footer><p>Copyright &#169; Corey Mills 2021</p></footer>
 	</body>
 </html>
-<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script async src="NavMenu.js"></script>
-<script async src="TopScript.js" ></script>
+<script src="TopScript.js" ></script>
