--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						</ul>
 					</div>
 				<div id="ddNav"class="dropDown">
-					<h2 class="dropDownBtn">&#8801 </h2>
+					<h2 ontouchstart="FlipDropDownState()"class="dropDownBtn">&#8801 </h2>
 					<div class="dropDownContent">
 						<a class="button"href="Education_Page.html">Education Projects</a>
 						<a class="button"href="GameJam_Page.html">Game Jam Projects</a>
