--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -21,9 +21,9 @@
 						<li><a class="button"href="Personal_Page.html">Personal Projects</a></li>
 						<li><a id="currentPage"class="button"href="Contact_Page.html">Contact</a></li>
 					</ul>
-				</div>				
+				</div>
 				<div id="ddNav"class="dropDown">
-					<h2 class="dropDownBtn">&#8801 </h2>
+					<h2 class="dropDownBtn"ontouchstart="FlipDropDownState()">&#8801 </h2>
 					<div class="dropDownContent">
 						<a class="button"href="index.html">About Me</a>
 						<a class="button"href="Education_Page.html">Education Projects</a>
