--- a/Education_Page.html
+++ b/Education_Page.html
@@ -23,7 +23,7 @@
 					</ul>
 				</div>
 				<div id="ddNav"class="dropDown">
-					<h2 class="dropDownBtn">&#8801 </h2>
+					<h2 class="dropDownBtn"ontouchstart="FlipDropDownState()">&#8801 </h2>
 					<div = class="dropDownContent">
 						<a class="button"href="index.html">About Me</a>
 						<a class="button"href="GameJam_Page.html">Game Jam Projects</a>
