--- a/Education_Page.html
+++ b/Education_Page.html
@@ -268,7 +268,7 @@
 	</body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script async src="NavMenu.js"></script>
+<script src="NavMenu.js"></script>
 <script async src="SlideShow.js"></script>
 <script src="MoreInfo.js"></script>
 <script src="TopScript.js"></script>
