--- a/Education_Page.html
+++ b/Education_Page.html
@@ -122,8 +122,8 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt5',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss5"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/BM6Jd312IfY?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>	
-						<div class="ss5"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/ECk3KlQFAhs?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ss5"><video src="Media/Flocking/Flocking111.mp4"autoplay>Video Not Found</video></div>	
+						<div class="ss5"><video src="Media/Flocking/Flocking311.mp4"autoplay>Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
@@ -152,8 +152,9 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt7',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/IRRzdAhTBxY?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
-						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/kykelsJNR1E?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/Pnzte7h22jw?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/ca46KjZbyHg?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/tYCHcB5eH_A?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
 					</div>
 				</div>
 			</div>
@@ -241,7 +242,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Mario & GravityGuy<a class="githubProjectLink"href="https://github.com/CoreyMills/Mario-GravityGuy_Uni-Project"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Mario & GravityGuy MiniGames<a class="githubProjectLink"href="https://github.com/CoreyMills/Mario-GravityGuy_Uni-Project"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
 						<p>
@@ -259,7 +260,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt11',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss11"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/bN-Obo7tuUA?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ss11"><video src="Media/Mario&GravityGuy.mp4"autoplay>Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
