--- a/Education_Page.html
+++ b/Education_Page.html
@@ -24,7 +24,7 @@
 				</div>
 				<div id="ddNav"class="dropDown">
 					<h2 class="dropDownBtn"ontouchstart="FlipDropDownState()">&#8801 </h2>
-					<div = class="dropDownContent">
+					<div class="dropDownContent">
 						<a class="button"href="index.html">About Me</a>
 						<a class="button"href="GameJam_Page.html">Game Jam Projects</a>
 						<a class="button"href="Personal_Page.html">Personal Projects</a>
