updated slideshow and videos
improved slideshow to not require specific ids.

placed video attributes in html

--- a/Education_Page.html
+++ b/Education_Page.html
@@ -55,7 +55,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss0"><video src="Media/RaytracingOutput.mp4"autoplay>Video Not Found</video></div>
+						<!--<div class="ssMedia"><video src="Media/RaytracingOutput.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>-->
 					</div>
 				</div>
 			</div>
@@ -68,7 +68,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt1',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss1"><video src="Media/RaytracingOutput.mp4"autoplay>Video Not Found</video></div>
+						<!--<div class="ssMedia"><video src="Media/RaytracingOutput.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>-->
 					</div>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt2',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss2"><video src="Media/TowerDefense.mp4"autoplay>Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/TowerDefense.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
@@ -94,8 +94,8 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt3',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss3"><video src="Media/FlappyBird/FB_TrainedBirds.mp4"autoplay>Video Not Found</video></div>
-						<div class="ss3"><video src="Media/FlappyBird/FB_TrainingBirds.mp4"autoplay>Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/FlappyBird/FB_TrainedBirds.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/FlappyBird/FB_TrainingBirds.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
@@ -108,8 +108,8 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt4',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss4"><video src="Media/Chess/ChessAnimated.mp4"autoplay>Video Not Found</video></div>
-						<div class="ss4"><video src="Media/Chess/ChessAlgorithm.mp4"autoplay>Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/Chess/ChessAnimated.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/Chess/ChessAlgorithm.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
@@ -122,8 +122,8 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt5',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss5"><video src="Media/Flocking/Flocking111.mp4"autoplay>Video Not Found</video></div>	
-						<div class="ss5"><video src="Media/Flocking/Flocking311.mp4"autoplay>Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/Flocking/Flocking111.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>	
+						<div class="ssMedia"><video src="Media/Flocking/Flocking311.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
@@ -138,7 +138,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt6',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss6"><video src="Media/RaytracingOutput.mp4"autoplay;>Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/RaytracingOutput.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
@@ -152,9 +152,9 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt7',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/Pnzte7h22jw?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
-						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/ca46KjZbyHg?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
-						<div class="ss7"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/tYCHcB5eH_A?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ssMedia"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/Pnzte7h22jw?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ssMedia"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/ca46KjZbyHg?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ssMedia"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/tYCHcB5eH_A?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
 					</div>
 				</div>
 			</div>
@@ -180,11 +180,11 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt8',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss8"><video src="Media/PhysicsEngine/SnowParticles.mp4"autoplay>Video Not Found</video> </div>
-						<div class="ss8"><video src="Media/PhysicsEngine/FireParticles.mp4"autoplay>Video Not Found</video></div>
-						<div class="ss8"><video src="Media/PhysicsEngine/RainParticles.mp4"autoplay>Video Not Found</video></div>
-						<div class="ss8"><video src="Media/PhysicsEngine/PhysicsCollision.mp4"autoplay>Video Not Found</video></div>
-						<div class="ss8"><img src="Media/PhysicsEngine/OctTree.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><video src="Media/PhysicsEngine/SnowParticles.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video> </div>
+						<div class="ssMedia"><video src="Media/PhysicsEngine/FireParticles.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/PhysicsEngine/RainParticles.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/PhysicsEngine/PhysicsCollision.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+						<div class="ssMedia"><img src="Media/PhysicsEngine/OctTree.png"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
@@ -210,7 +210,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt9',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss9"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/s6B4YX9Q6J4?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
+						<div class="ssMedia"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/s6B4YX9Q6J4?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>
 					</div>
 				</div>
 			</div>
@@ -235,9 +235,9 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt10',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">					
-						<div class="ss10"><img src="Media/Battleships/ConcurrentGames.png"alt="Image Not Found"/></div>
-						<div class="ss10"><img src="Media/Battleships/Spectating.png"alt="Image Not Found"/></div>						
-						<div class="ss10"><img src="Media/Battleships/ChallengeRequest.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><img src="Media/Battleships/ConcurrentGames.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><img src="Media/Battleships/Spectating.png"alt="Image Not Found"/></div>						
+						<div class="ssMedia"><img src="Media/Battleships/ChallengeRequest.png"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
@@ -260,7 +260,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt11',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss11"><video src="Media/Mario&GravityGuy.mp4"autoplay>Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/Mario&GravityGuy.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
