--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -43,9 +43,9 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss0"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/iWRIFyn7rt8?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>						
-						<div class="ss0"><img src="Media/GGJ2021/X marks the spot_screenshot.png"alt="Image Not Found"/></div>						
-						<div class="ss0"><img src="Media/GGJ2021/page-manual-two.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/iWRIFyn7rt8?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>						
+						<div class="ssMedia"><img src="Media/GGJ2021/X marks the spot_screenshot.png"alt="Image Not Found"/></div>						
+						<div class="ssMedia"><img src="Media/GGJ2021/page-manual-two.png"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
@@ -58,7 +58,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt1',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss1"><video src="Media/GGJ2020/Bermuda.mp4"autoplay>Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/GGJ2020/Bermuda.mp4" controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
@@ -71,7 +71,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt2',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss2"><img src="Media/SoulCats.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><img src="Media/SoulCats.png"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
@@ -84,7 +84,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt3',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss3"><video src="Media/UTC_GameJam.mp4"autoplay>Video Not Found</video></div>				
+						<div class="ssMedia"><video src="Media/UTC_GameJam.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>				
 					</div>
 				</div>
 			</div>
