--- a/Personal_Page.html
+++ b/Personal_Page.html
@@ -43,7 +43,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ss0"><video src="Media/ChosenDemise.mp4"autoplay>Video Not Found</video></div>
+						<div class="ssMedia"><video src="Media/ChosenDemise.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 					</div>
 				</div>
 			</div>
