Text Update (part 1)

--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -35,11 +35,12 @@
 		</header>
 		<main>
 			<div class="sec">
-				<div><h2>X Marks the Spot<a class="githubProjectLink"href="https://github.com/sirmarcomoro/GGJ2021"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>'X' Marks the Spot<a class="githubProjectLink"href="https://github.com/sirmarcomoro/GGJ2021"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>A game created for "Global Games Jam 2021" using the Unity engine.<br><br><a class="externalLink"href="https://globalgamejam.org/2021/games/x-marks-spot-6">(Jam Site - Project)</a></p>
-						<p id="smt0"class="showMoreText">A game created for the Global Games Jam event, at the Online Staffordshire University site.<br><br>Game created over 48 hours with a team of 6.</p>
+						<p>A game created for "Global Games Jam 2021" using the Unity engine.<br><br><a class="externalLink"href="https://globalgamejam.org/2021/games/x-marks-spot-6">'X' Marks the Spot Submission</a></p>
+						<p id="smt0"class="showMoreText">A game created for the Global Games Jam event, at the Online Staffordshire University site.<br><br>Game was created in a period of 48 hours with a team of 6.<br><br>
+						Within the team my role was to code the functionality and gameplay of all the "puzzles" within the game and the player interactions with them.<br> I also designed some of the modular levels.</p>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
@@ -53,8 +54,10 @@
 				<div><h2>Bermuda</h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>A game created for "Global Games Jam 2020" using the Unreal engine.<br><br><a class="externalLink"href="https://globalgamejam.org/2020/games/bermuda-6">(Jam Site - Project)</a></p>
-						<p id="smt1"class="showMoreText">Text Here</p>
+						<p>A game created for "Global Games Jam 2020" using the Unreal engine.<br><br><a class="externalLink"href="https://globalgamejam.org/2020/games/bermuda-6">Bermuda Submission</a></p>
+						<p id="smt1"class="showMoreText">A game created for the Global Games Jam event, at the Staffordshire University site.<br><br>
+						The Game was created in a period of 48 hours with a team of 10. I was one of 2 programmers.<br><br>
+						My role focused on implementing the Gameplay aspects using the blueprint system.</p>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt1',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
@@ -66,8 +69,10 @@
 				<div><h2>Soul Cats<a class="githubProjectLink"href="https://github.com/CoreyMills/Soulcats"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>Here are some images from the week-long Game Jam run by Phi Dinh and Niall Taylor (College Lecturers at the time).<br><br>The project included 9 other students; I was one of two Junior Programmers on the team, I wrote code for the gameplay elements and their physics-based effects within the game.<br><br>I also modelled some of the 3D Objects seen in the first image (Hammer & Log).​<br><br>​Created with Unity and 3DS MAX.</p>
-						<p id="smt2"class="showMoreText">Text Here</p>
+						<p>A week long game jam organised by Phi Dinh and Niall Taylor at UTC@MediaCityUK, to create a game using the Unity engine.</p>
+						<p id="smt2"class="showMoreText">The game jam produced the "Soul Cats" game.<br><br>
+						I was one of two junior programmers in the team, my role was to code the gameplay mechanics and the interactions between game objects using physics.<br><br>
+						I also 3D modelled and textured some objects for the game in 3DS MAX, including the "Hammer" shown in the image.</p>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt2',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
@@ -79,8 +84,9 @@
 				<div><h2>UTC Game</h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>Here is a Game Jam that was run out of the UTC@MediaCityUK college in 2017, the theme being the college.<br><br>I created two small 2D mini-games that played one after the other, The first a parody of Donkey Kong and the second of Pac-Man.The enemy characters were based on college lecturers at the time.<br><br>​The first Image shows the Kong Level and the second is a short video of the games being roughly played.Created with Unity.<br><br></p>
-						<p id="smt3"class="showMoreText">Text Here</p>
+						<p>A 5-day game jam during college hours at the UTC@MediaCityUK college, in 2017</p>
+						<p id="smt3"class="showMoreText">In a team of 2, we created 2 small mini-games which parodied Donkey Kong and Pac-Man using the theme of UTC@MediaCityUK.<br><br>
+						The game was created using the Unity engine where I programmed the mini-games, while my partner created the images.</p>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt3',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
