--- a/Personal_Page.html
+++ b/Personal_Page.html
@@ -38,8 +38,10 @@
 				<div><h2>Search for a Star 2021</h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>A game created for "Search for a Star 2021" using the Unity engine.<br><br><a class="externalLink"href="https://silent-lunatic.itch.io/chosen-demise">(Project Submission)</a></p>
-						<p id="smt0"class="showMoreText">Text Here</p>						
+						<p>A game created for "Search for a Star 2021" using the Unity engine.<br><br><a class="externalLink"href="https://silent-lunatic.itch.io/chosen-demise">Chosen Demise Submission</a></p>
+						<p id="smt0"class="showMoreText">Chosen Demise is an arena survival game where you choose between sets of upgrades which apply to both the player and the opponents.<br><br>
+						This game was made under 80 hours as part of the challenge and was created with the theme of "choice" in mind.<br><br>
+						For the project I used AI, Navmesh Pathfinding, and Rigidbody Physics.</p>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
