--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 				<div class="flexContainer"> 
 					<div class="evenCol">
 						<h3>Programming Languages</h3>
-						<div class="row"><ul><li><p>C++</p></li><li><p>C#</p></li><li><p>Java</p></li><li><p>HTML</p></li><li><p>CSS</p></li><li><p>JavaScript</p></li></ul></div>
+						<div class="row"><ul><li><p>C++</p></li><li><p>C#</p></li><li><p>Java</p></li><li><p>HTML</p></li><li><p>CSS</p></li><li><p>JavaScript</p></li><li><p>JQuery</p></li></ul></div>
 					</div>
 					<div class="evenCol"> 
 						<h3>Game Engines & API's</h3> 
-						<div class="row"><ul><li><p>Unity</p></li><li><p>Unreal</p></li><li><p>DirectX 11</p></li><li><p>OpenGL</p></li><li><p>SDL</p></li><br/></ul></div>
+						<div class="row"><ul><li><p>Unity</p></li><li><p>Unreal</p></li><li><p>DirectX 11</p></li><li><p>OpenGL</p></li><li><p>SDL</p></li></ul></div>
 					</div>
 				</div>
 			</div>
