--- a/Education_Page.html
+++ b/Education_Page.html
@@ -38,19 +38,7 @@
 				<div><h2>Final Year Project<a class="githubProjectLink"href="https://github.com/CoreyMills/RayTracerSmall"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>
-							Final Year.<br><br>
-							Created using C++.<br><br>
-							Given a framework that used raytracing to render spheres. I implemented a range of techniques to manage memory and improve processing time. I added-
-							<ul>
-								<li>Threading</li>
-								<li>Animations</li>
-								<li>Heap Management</li>
-								<li>Porting to Linux - VMWare Ubuntu</li>
-							</ul>
-							​My additions took the framework from a completion time of over 100 seconds to 8-10 seconds (Windows). 7-9 seconds (Linux).<br> <br>
-							At 640x480 resolution.  
-						</p> 
+						<p>An Agent-Based Model Simulation which used Genetic Algorithms to test how optional traits and environmental factors affect the evolution of AI agents.</p> 
 						<p id="smt0"class="showMoreText">Text Here</p>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
@@ -146,9 +134,10 @@
 				<div><h2>Tank AI<a class="githubProjectLink"href="https://github.com/CoreyMills/Tank-AI"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>Second Year.<br><br>Created using C++ and the SDL library.<br><br>Tank AI created to be placed within the given environment, and use the following behaviours-<br><br>
-							FSM & FuSM decision making<br><br>Steering Behaviours (Seek, Arrive, Pursuit, Ob Avoidance, etc.).<br><br>DRS Pathfinding</p> 
-						<p id="smt7"class="showMoreText">Text Here</p>
+						<p>Second year artificial intelligence project to create an AI tank using C++ and the SDL library.</p>
+						<div id="smt7"class="showMoreText"><p>The project included taking a variety of AI techniques to create an efficient self-contained tank AI.<br><br>
+						Such as:</p><ul><li>FSM & FuSM decision making</li><li>DRS pathfinding</li><li>Steering behaviours</li>
+						<ul><li>Seek</li><li>Arrive</li><li>Pursuit</li><li>Obstacle avoidance</li><li>Etc</li></ul></ul></div>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt7',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
@@ -162,21 +151,11 @@
 				<div><h2>Physics-Engine<a class="githubProjectLink"href="https://github.com/CoreyMills/Physics-Engine"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p> 
-							Second Year
-							Created using Directx 11 & C++.
-							A Physics engine, using a similar framework to that of the graphics engine; but with different features.
-							ParticleSystem (Fire, Snow, Rain).
-							Partial Separating Axis Theorem, AABB, Bounding Box & Sphere Collision Detection
-							Collision Resolution.
-							Particle Physics Model.
-							Rigidbody Physics Model (Angular Motion).
-							OctTree.
-							Etc.
-							Here are several images & short videos to show some fo these features.
-						</p> 
-						
-						<p id="smt8"class="showMoreText">Text Here</p>
+						<p>Second year project to create a physics engine using Directx 11 & C++.</p>
+						<div id="smt8"class="showMoreText"><p>Using a DirectX 11 graphics engine as a framework, I added a range complex physics techniques such as:</p>
+						<ul><li>Particle system (fire, snow, rain)</li><li>Partial seperating axis theorem</li><li>AABB collision</li><li>Bounding box collision</li>
+						<li>Sphere collision</li><li>Collision resolution</li><li>Rigidbody physics</li><li>OctTree for game objects</li></ul>
+						<p>Many of the techniques/features listed can be seen in the videos of the slideshow.</p></div>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt8',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
@@ -192,21 +171,11 @@
 				<div><h2>Graphics Engine<a class="githubProjectLink"href="https://github.com/CoreyMills/DX11-Framework"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>
-							Second Year
-							Graphics Engine created in DirectX using C++.
-							Project Includes-
-							Phong and Blur shaders.
-							Directional Lighting
-							Hard-Coded values and .OBJ loading for 3D/2D Models.
-							Texturing, transparency, culling, skybox, Render-to-texture
-							Car movement and rotation. 
-							Billboarding
-							Keyboard & Mouse Input
-							Etc.
-							The video shows many of the above features.
-						</p> 
-						<p id="smt9" class="showMoreText">Text Here</p>
+						<p>Second year project, where DirectX 11 and C++ were used to create a Graphics Engine.</p>						
+						<div id="smt9" class="showMoreText"><p>The project included a range of techniques such as:</p>
+						<ul><li>Phong shader</li><li>Blur shader</li><li>Directional lighting</li><li>.OBJ loaded 3D/2D models</li><li>Texturing</li><li>Transparency</li>
+						<li>Culling</li><li>Skybox</li><li>Render-to-texture</li><li>Object movement/rotation</li><li>Billboarding</li><li>Keyboard/mouse input</li></ul>
+						<p>Many of these techniques can be seen in the video.</p></div>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt9',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
@@ -218,20 +187,13 @@
 				<div><h2>Concurrent Network Battleships<a class="githubProjectLink"href="https://github.com/CoreyMills/Battleships"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>
-							Second Year
-							Created in C# using windows forms in vs.
-							This is a Server-Client based project that allows clients to play battleships against each other.
-							Server heavy network model
-							Different Packet Types and Packet Handling
-							TCP & UDP 
-							Windows Forms / UI 
-							2D Sprite Animation
-							Multiple Threads
-							Thread-safe techniques
-							Concurrent Dictionaries
-						</p> 
-						<p id="smt10"class="showMoreText">Text Here</p>
+						<p>Second year project to create a game which used a client-server architecture, programmed in C#.</p>
+						<div id="smt10"class="showMoreText"><p>For the module I created the "Battleships" game using windows forms, 
+						which clients could play against each other on the server.<br><br>
+						The project used a range of techniques to allow multiple concurrent games to run efficiently, such as:</p>
+						<ul><li>packet handling</li><li>TCP</li><li>UDP</li><li>Windows forms/UI</li><li>2D animation</li>
+						<li>threading</li><li>thread-safe techniques</li><li>concurrent dictionaries</li></ul>
+						<p>The clients were able to join the game queue, communicate publicly/privately, and challenge each other</p></div>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt10',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">					
@@ -245,18 +207,10 @@
 				<div><h2>Mario & GravityGuy MiniGames<a class="githubProjectLink"href="https://github.com/CoreyMills/Mario-GravityGuy_Uni-Project"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
-						<p>
-							First Year
-							Includes two mini-games.
-							The first is a singleplayer game that uses a Mario theme. The game has AI, Collision Handling, Spritesheets etc.
-							The second is a single or multiplayer game, that takes inspiration from GravityGuy. The game has collision handling, modular levels from a text file, etc.
-							​
-							Implemented TTF library and SDL mixer.
-							​
-							Created using C++ and the SDL library.
-							Audio Created using BeepBox.
-						</p> 
-						<p id="smt11"class="showMoreText">Text Here</p>
+						<p>First year university project. Created using C++ and the SDL library.</p>
+						<p id="smt11"class="showMoreText">For the module I produced two small mini games which parodied "Mario" and "GravityGuy".<br><br>
+						The games included many of the basic necessities for a video game such as simple AI, Collision detection/response, 2D animation.<br><br>
+						On top of the basic functionality the "GravityGuy" game also used modular levels from text files and gave a multiplayer option.</p>
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt11',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
