updating images to jpg

--- a/Education_Page.html
+++ b/Education_Page.html
@@ -163,7 +163,7 @@
 						<div class="ssMedia"><video src="Media/PhysicsEngine/FireParticles.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 						<div class="ssMedia"><video src="Media/PhysicsEngine/RainParticles.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
 						<div class="ssMedia"><video src="Media/PhysicsEngine/PhysicsCollision.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
-						<div class="ssMedia"><img src="Media/PhysicsEngine/OctTree.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><img src="Media/PhysicsEngine/OctTree.jpg"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
@@ -197,9 +197,9 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt10',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">					
-						<div class="ssMedia"><img src="Media/Battleships/ConcurrentGames.png"alt="Image Not Found"/></div>
-						<div class="ssMedia"><img src="Media/Battleships/Spectating.png"alt="Image Not Found"/></div>						
-						<div class="ssMedia"><img src="Media/Battleships/ChallengeRequest.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><img src="Media/Battleships/ConcurrentGames.jpg"alt="Image Not Found"/></div>
+						<div class="ssMedia"><img src="Media/Battleships/Spectating.jpg"alt="Image Not Found"/></div>						
+						<div class="ssMedia"><img src="Media/Battleships/ChallengeRequest.jpg"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
