--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h3>Currently looking for a graduate level programming job.</h3>
 						<a class="button"href="Media/CoreyMills_CV.docx"download>CV Download</a>
 					</div>
-					<div class="evenCol"><img src="Media/ProfilePic.png"alt="Profile pic not found!"width=50%></div>
+					<div class="evenCol"><img src="Media/ProfilePic.jpg"alt="Profile pic not found!"width=35%></div>
 				</div>
 			</div>
 			<div class="sec">
