--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -45,8 +45,8 @@
 					</div>
 					<div class="col ssContainer">
 						<div class="ssMedia"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/iWRIFyn7rt8?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>						
-						<div class="ssMedia"><img src="Media/GGJ2021/X marks the spot_screenshot.png"alt="Image Not Found"/></div>						
-						<div class="ssMedia"><img src="Media/GGJ2021/page-manual-two.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><img src="Media/GGJ2021/X marks the spot_screenshot.jpg"alt="Image Not Found"/></div>						
+						<div class="ssMedia"><img src="Media/GGJ2021/page-manual-two.jpg"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
@@ -76,7 +76,7 @@
 						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt2',this)">Show More</a></div>
 					</div>
 					<div class="col ssContainer">
-						<div class="ssMedia"><img src="Media/SoulCats.png"alt="Image Not Found"/></div>
+						<div class="ssMedia"><img src="Media/SoulCats.jpg"alt="Image Not Found"/></div>
 					</div>
 				</div>
 			</div>
